<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EntryActivity">

    <TextView
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="56dp"
        android:text="@string/Email"
        app:layout_constraintEnd_toStartOf="@+id/EmailBox"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

    <TextView
        android:id="@+id/UserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="116dp"
        android:text="@string/UserName"
        app:layout_constraintEnd_toStartOf="@+id/UsernameBox"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/Password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserName" />

    <!--//誕生日のやつ-->

    <TextView
        android:id="@+id/Profession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/Profession"
        app:layout_constraintBottom_toTopOf="@+id/BirthDay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email"
        app:layout_constraintVertical_bias="0.561" />

    <!--    誕生日のやつここまで-->


    <TextView
        android:id="@+id/BirthDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="56dp"
        android:text="@string/BirthDay"
        app:layout_constraintBottom_toTopOf="@+id/Location"
        app:layout_constraintStart_toStartOf="parent" />

    <NumberPicker
        android:id="@+id/numberPicker"
        android:layout_width="60dp"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.367"
        app:layout_constraintStart_toEndOf="@+id/BirthDay"
        app:layout_constraintTop_toBottomOf="@+id/ProfessionBox" />

    <EditText
        android:id="@+id/UsernameBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="52dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/UserName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/PasswordBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toEndOf="@+id/Password"
        app:layout_constraintTop_toBottomOf="@+id/UsernameBox" />

    <EditText
        android:id="@+id/EmailBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordBox" />

    <EditText
        android:id="@+id/ProfessionBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Profession"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toEndOf="@+id/Profession"
        app:layout_constraintTop_toBottomOf="@+id/EmailBox" />

    <TextView
        android:id="@+id/Location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="240dp"
        android:text="@string/Location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Locationbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Location"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="469dp" />

    <EditText
        android:id="@+id/Profile"
        android:layout_width="273dp"
        android:layout_height="140dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Profile"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="548dp" />

    <Button
        android:id="@+id/Done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Done"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="695dp" />

</androidx.constraintlayout.widget.ConstraintLayout>